# Splendor_ai

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Splendor_ai  cmake_install.cmake  div.txt  interface.cpp
genetic_alg/: Agent.h  Board.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  MemoryTool.h  NeuralNetwork.h  RngGenerator.h  SplendorGame.h  cards.csv  run_log.txt
